# nazi-symbols-classification

./: .buildinfo  .dockerignore  .gitignore  01_about.html  02_source.html  03_authors.html  04_contributing.html  CONTRIBUTING.rst  Dockerfile  Makefile  README.rst  docker-compose.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: release.yml  sphinx.yml  test.yml
_sources/: 03_authors.rst.txt
docs/source/: conf.py  index.rst
nazi_symbols_classification/: constants.py  image_processing.py  pipeline.py  utils.py
nazi_symbols_classification_backend/: main.py
nazi_symbols_classification_backend/app/: application.py  globals.py  version.py
nazi_symbols_classification_backend/app/configs/: __init__.py  base.py  settings_factory.py
nazi_symbols_classification_backend/app/middlewares/: logging.py
nazi_symbols_classification_backend/app/routes/: __init__.py  classification.py  system.py
nazi_symbols_classification_backend/app/schemas/: classification.py  system.py
nazi_symbols_classification_backend/app/services/: classification.py
nazi_symbols_classification_backend/app/utils/: logging.py
notebooks/: YOLO_classification_nazi_symbols.ipynb  YOLOv5_Classification_nazi_symbols.ipynb  data_cleaning.ipynb
tests/test_backend/: conftest.py  test_application.py
tests/test_backend/test_configs/: test_base.py  test_factory.py
tests/test_backend/test_middlewares/: test_logging.py
tests/test_backend/test_routes/: test_system.py
tests/test_package/: test_version.py
(+4 files in other folders)
